--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,12 @@
             android:exported="true"
             android:label="@string/title_activity_basic_shapes"
             android:theme="@style/Theme.ComposeCanvasCollections.NoActionBar" />
+
+        <activity
+            android:name=".ui.BallClickerGame"
+            android:exported="true"
+            android:label="@string/title_activity_basic_shapes"
+            android:theme="@style/Theme.ComposeCanvasCollections.NoActionBar" />
         <activity
             android:name=".ui.MainActivity"
             android:exported="true">
