--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,6 +56,11 @@
         <activity
             android:name=".ui.tictactoe.TicTacToeActivity"
             android:exported="true" />
+
+        <activity
+            android:name=".ui.ImageRevealActivity"
+            android:exported="true" />
+
         <activity
             android:name=".ui.MainActivity"
             android:exported="true">
